# voxelizer

./: .gitignore  CMakeLists.txt  CompFab.cpp  LICENSE  Mesh.cpp  README  README.md  main.cpp  main.cu  profile.sh
data/dragon/: dragon_512.binvox
data/head/: head.binvox
data/teapot/: teapot_512.binvox
includes/: CompFab.h  Mesh.h  args.h  cuda_math.h  utils.h
sample/: readme  voxelizer
